# rs.clean

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: handler.rs  item_router.rs  mod.rs  router.rs
src/entities/: todo.rs  user.rs
src/infrastructure/: in_memory_user_repository.rs  memory_repo.rs  memory_repo_new.rs  mod.rs
src/interfaces/: todo_repository.rs  user_repository.rs
src/use_cases/: user_service.rs
src/usecases/: mod.rs  todo_usecase.rs  todo_usecase_delete.rs
tests/: api_test.sh  delete_test.rs  unit_test.rs
