[package]
name = "rs_clean"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rs_clean"
path = "src/main.rs"

[lib]
name = "rs_clean"
path = "src/lib.rs"

[dependencies]
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
